@@ -104,10 +104,10 @@ public class RequirementDefinitionImpl extends ConstraintDefinitionImpl implemen
      */
     @Override
     public EList<PartUsage> getActorParameter() {
-        List<PartUsage> actorParameters = this.getParameter().stream()
-                .filter(PartUsage.class::isInstance)
-                .filter(parameter -> parameter.getOwningMembership() instanceof ActorMembership)
-                .map(PartUsage.class::cast)
+        List<PartUsage> actorParameters = this.getFeatureMembership().stream()
+                .filter(ActorMembership.class::isInstance)
+                .map(ActorMembership.class::cast)
+                .map(ActorMembership::getOwnedActorParameter)
                 .toList();
         return new EcoreEList.UnmodifiableEList<>(this, SysmlPackage.eINSTANCE.getRequirementDefinition_ActorParameter(), actorParameters.size(), actorParameters.toArray());
     }
