@@ -107,10 +107,10 @@ public class RequirementUsageImpl extends ConstraintUsageImpl implements Require
      */
     @Override
     public EList<PartUsage> getActorParameter() {
-        List<PartUsage> actorParameters = this.getParameter().stream()
-                .filter(PartUsage.class::isInstance)
-                .map(PartUsage.class::cast)
-                .filter(parameter -> parameter.getOwningMembership() instanceof ActorMembership)
+        List<PartUsage> actorParameters = this.getFeatureMembership().stream()
+                .filter(ActorMembership.class::isInstance)
+                .map(ActorMembership.class::cast)
+                .map(ActorMembership::getOwnedActorParameter)
                 .toList();
         return new EcoreEList.UnmodifiableEList<>(this, SysmlPackage.eINSTANCE.getRequirementUsage_ActorParameter(), actorParameters.size(), actorParameters.toArray());
     }
