@@ -4,17 +4,17 @@ If you're upgrading from an older version of {product} to the latest release, th
 
 In any case, it is strongly recommended to back up your data before proceeding with any migration.
 
-== v2025.6.0
+== 2025.6.0
 
 Adopting the 2025.6.0 version doesn't require a migration process.
 
-== v2025.4.0
+== 2025.4.0
 
 Align metamodel to SysMLv2 2024-12 specification released on December 2024(see https://www.omg.org/spec/SysML/ for more details) and KerML 2024-12 specification released on December 2024(see https://www.omg.org/spec/KerML/ for more details).
 Automatic migration process is provided to update your existing SysON models/projects to the new metamodel.
 But in any case, please download all your models/projects and backup your database before upgrading to 2025.4.0.
 
-== v2025.2.0
+== 2025.2.0
 
 Adopting the 2025.2.0 version doesn't require a migration process.
 
