@@ -157,6 +157,7 @@ package p1 {
 ```
 
 - In the _Explorer_ view, fix an issue where the context menu of a tree item was loaded twice.
+- In diagrams, fix an issue where the `Actors` were not shown anymore in the _actors_ compartment.
 
 
 == Improvements
